GOPRF-000: hotfix 1.2.0